src/lib.rs

    pub fn HPDF_Page_ShowTextNextLineEx(page: HPDF_Page,
                                        word_space: HPDF_REAL,
                                        char_space: HPDF_REAL,
                                        text: *const ::libc::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetGrayFill(page: HPDF_Page, gray: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetGrayStroke(page: HPDF_Page, gray: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetRGBFill(page: HPDF_Page, r: HPDF_REAL, g: HPDF_REAL,
                                b: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_SetRGBStroke(page: HPDF_Page, r: HPDF_REAL, g: HPDF_REAL,
                                  b: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_SetCMYKFill(page: HPDF_Page, c: HPDF_REAL, m: HPDF_REAL,
                                 y: HPDF_REAL, k: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_SetCMYKStroke(page: HPDF_Page, c: HPDF_REAL,
                                   m: HPDF_REAL, y: HPDF_REAL, k: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_ExecuteXObject(page: HPDF_Page, obj: HPDF_XObject)
     -> HPDF_STATUS;
    pub fn HPDF_Page_New_Content_Stream(page: HPDF_Page,
                                        new_stream: *mut HPDF_Dict)
     -> HPDF_STATUS;
    pub fn HPDF_Page_Insert_Shared_Content_Stream(page: HPDF_Page,
                                                  shared_stream: HPDF_Dict)
     -> HPDF_STATUS;
    pub fn HPDF_Page_DrawImage(page: HPDF_Page, image: HPDF_Image,
                               x: HPDF_REAL, y: HPDF_REAL, width: HPDF_REAL,
                               height: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_Circle(page: HPDF_Page, x: HPDF_REAL, y: HPDF_REAL,
                            ray: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_Ellipse(page: HPDF_Page, x: HPDF_REAL, y: HPDF_REAL,
                             xray: HPDF_REAL, yray: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Page_Arc(page: HPDF_Page, x: HPDF_REAL, y: HPDF_REAL,
                         ray: HPDF_REAL, ang1: HPDF_REAL, ang2: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_TextOut(page: HPDF_Page, xpos: HPDF_REAL,
                             ypos: HPDF_REAL, text: *const ::libc::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_Page_TextRect(page: HPDF_Page, left: HPDF_REAL,
                              top: HPDF_REAL, right: HPDF_REAL,
                              bottom: HPDF_REAL, text: *const ::libc::c_char,
                              align: HPDF_TextAlignment, len: *mut HPDF_UINT)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetSlideShow(page: HPDF_Page,
                                  _type: HPDF_TransitionStyle,
                                  disp_time: HPDF_REAL, trans_time: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_ICC_LoadIccFromMem(pdf: HPDF_Doc, mmgr: HPDF_MMgr,
                                   iccdata: HPDF_Stream, xref: HPDF_Xref,
                                   numcomponent: ::libc::c_int)
     -> HPDF_OutputIntent;
    pub fn HPDF_LoadIccProfileFromFile(pdf: HPDF_Doc,
                                       icc_file_name: *const ::libc::c_char,
                                       numcomponent: ::libc::c_int)
     -> HPDF_OutputIntent;
}
